--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
 
     <main id="content" class="main-content" role="main">
       {% include toc.html html=content %}
+      {{ content }}
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
