--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      {% include toc.html sanitize=true html=content %}
+      {% include toc.html html=content %}
       {{ content }}
 
       <footer class="site-footer">
