--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
+        <a href="https://momobot.cf/" class="btn">Visit homepage</a>
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip (Sources)</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz (Sources)</a>
         <a href="https://github.com/bjm021/momobot/releases/latest" class="btn">Download binaries</a>
